<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/main_page"
            android:icon="@drawable/home_icon"
            android:title="@string/pagina_de_inicio">
        </item>
        <item
            android:id="@+id/anadir_producto"
            android:title="@string/a_adir_nuevo_producto"
            android:icon="@drawable/producto_icon" />
    </group>
    <item
        android:title="@string/consultas">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/ver_stock"
                    android:title="@string/ver_stock"
                    android:icon="@drawable/stock_icon" />

            </group>
        </menu>
    </item>

    <item
        android:title="@string/movimientos">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/registrar_entradas"
                    android:title="@string/registrar_entradas"
                    android:icon="@drawable/icono_entrada" />
                <item
                    android:id="@+id/registrar_salidas"
                    android:title="@string/registrar_salidas"
                    android:icon="@drawable/icono_salida" />
                <item
                    android:id="@+id/consultar_entradas"
                    android:title="@string/consultar_entradas"
                    android:icon="@drawable/consulta_icon" />
                <item
                    android:id="@+id/consultar_salidas"
                    android:title="@string/consultar_salidas"
                    android:icon="@drawable/consulta_icon" />
            </group>
        </menu>
    </item>



    <item
        android:title="@string/prooverdores_y_clientes">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/anadir_cliente"
                    android:title="@string/registrar_cliente"
                    android:icon="@drawable/visualizaralertas_icon"/>
                <item
                    android:id="@+id/anadir_proveedor"
                    android:title="Registrar Proovedor"
                    android:icon="@drawable/alerta_icon" />
                <item
                    android:id="@+id/ver_clientes"
                    android:title="Ver clientes"
                    android:icon="@drawable/cliente_icon"/>
                <item
                    android:id="@+id/ver_proovedores"
                    android:title="@string/ver_proveedores"
                    android:icon="@drawable/proovedor_icon" />
            </group>
        </menu>
    </item>

</menu>
