<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:animateLayoutChanges="true"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="0dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/nombreTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="Coca Cola"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textColor="@color/black"
                    android:textSize="21sp"
                    android:textStyle="bold"/>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="20dp">
                    <TextView
                        android:id="@+id/telefonoTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/telefono"
                        android:textSize="24sp"
                        android:textColor="@color/black"
                        android:autoLink="phone"

                        />
                    <TextView
                        android:id="@+id/correoTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/correo_electronico"
                        android:textSize="15sp"
                        android:layout_marginTop="40dp"
                        android:autoLink="email"

                        />
                    </RelativeLayout>

            </LinearLayout>
            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="10dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tipoTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tipoPersona"
                    android:textSize="20sp"/>

            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>